--- a/back/package.json
+++ b/back/package.json
@@ -15,6 +15,7 @@
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "express-session": "^1.17.3",
+    "method-override": "^3.0.0",
     "mysql2": "^2.3.3",
     "node-fetch": "^3.2.10",
     "sequelize": "^6.21.4",
