--- a/back/.env
+++ b/back/.env
@@ -1,7 +1,8 @@
-DB_USERNAME=
-DB_PASSWORD=
+NODE_ENV=production
+DB_USERNAME=root
+DB_PASSWORD=Admin123
 DB_DATABASE=land_db
-DB-HOST:localhost
+DB_HOST=127.0.0.1
 DB_PORT=3306
 
 DB_HOST_DEV=127.0.0.1
@@ -10,3 +11,4 @@ DB_USERNAME_DEV=root
 DB_PASSWORD_DEV=root
 
 PORT=3001
+# ALTER USER 'root'@'localhost' IDENTIFIED WITH mysql_native_password BY 'Admin@1234';
