--- a/back/package.json
+++ b/back/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node back/index.js"
+    "start": "node index.js",
+    "prod": "NODE_ENV=production node index.js"
+
   },
   "keywords": [],
   "author": "",
