--- a/front/package.json
+++ b/front/package.json
@@ -7,12 +7,14 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.1.3",
+    "bootstrap": "^4.6.0",
     "emailjs": "^4.0.1",
     "emailjs-com": "^3.2.0",
     "i18next": "^22.3.0",
     "i18next-browser-languagedetector": "^7.0.1",
     "i18next-http-backend": "^2.1.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.8.0",
     "react-burger-menu": "^3.0.8",
     "react-dom": "^18.2.0",
     "react-i18next": "^12.1.1",
